[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encab"
version = "1.0.2"
authors = [
  { name="Sebastian Kuebeck", email="sebastian.kuebeck@encab.io" },
]
description = "Process manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML >= 6.0, < 7",
  "types-PyYAML >= 6.0.12.2, < 7",
  "marshmallow >= 3.19.0, < 5",
  "marshmallow-dataclass[enum,union] >= 8.5.10, < 9",
  "marshmallow-enum >= 1.5.1, < 2",
  "pluggy >= 1.0.0, < 2",
  "python-dotenv >= 0.21.1, < 2"
]

[project.urls]
"Homepage" = "https://github.com/sebastian-kuebeck/encab"
"Documentation" = "https://encab.readthedocs.io"
"Bug Tracker" = "https://github.com/sebastian-kuebeck/encab"

[project.scripts]
encab = "encab.encab:encab"

[tool.ruff]
line-length = 120